--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 div.container{
-    background-color: lightblue;
+    background-color: rgb(148, 191, 39);
     text-align: center;
     font-size: 24px;
 
@@ -14,10 +14,13 @@ div.container-fluid{
 }
 
 h1{
-    text-align: left;
+    text-align: center;
     
 }
 
+.row div{
+    border:1px solid black;
+}
 
 
 div.container-sm{
